--- a/firstwebpage/index.html
+++ b/firstwebpage/index.html
@@ -15,10 +15,19 @@
 
 <h6 id="myTitle2" > another heading line with h6 tag</h6>
 <a href="http://nyu.edu">this is my link</a>
-<p>
+
+
+<p class="myPara1 allPara">
 this is a paragraph with multiple sentences. I am learning html in creative coding lab!
 </p>
 
+<p class="myPara2 allPara">
+this is a paragraph with multiple sentences. I am learning html in creative coding lab!
+</p>
+
+<p class='myPara3' class="allPara">
+this is a paragraph with multiple sentences. I am learning html in creative coding lab!
+</p>
 
 <img src="/firstwebpage/images/nyu shanghai.jpg" alt="a picture of nyuSH">
 
