--- a/project-template/index.html
+++ b/project-template/index.html
@@ -9,8 +9,7 @@
     <script src="js/lib/p5.sound.js"></script>
 </head>
 <body>
-    project title 
-
+<h1>project title</h1>
 
     <script src="js/script.js"></script>
 </body>
