--- a/project-template/index.html
+++ b/project-template/index.html
@@ -9,7 +9,7 @@
     <script src="js/lib/p5.sound.js"></script>
 </head>
 <body>
-<h1>project title</h1>
+<h1>Under the Sea</h1>
 
     <script src="js/script.js"></script>
 </body>
