--- a/project-template/index.html
+++ b/project-template/index.html
@@ -10,7 +10,15 @@
 </head>
 <body>
 <h1>Under the Sea</h1>
+<div class="space">
 
     <script src="js/script.js"></script>
+    </div>
+    Under the Sea takes on the life of a jellyfish, seen aimlessly wandering in search of food. 
+    The connotation of the jellyfish’s actions is dependent on the user—where it may appear trapped in an endless cycle, 
+    or calmly swimming around. Regardless of the user’s interpretation of the jellyfish, 
+    this piece is created with a calming effect in mind. 
+    Through the repetition of movement and the integration of cool, light colors, 
+    Under the Sea holds therapeutic attributes. 
 </body>
 </html>
