--- a/projecttemp/index.html
+++ b/projecttemp/index.html
@@ -9,18 +9,21 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body >
+<div class="container-landing-page">
+    <h1>Abstract Galaxy</h1>
+  </div>
+
   <div class="box1">
-    <h6>title 1</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores magnam molestias corrupti provident a autem nesciunt rem laudantium consectetur? Laudantium reprehenderit et, velit numquam dignissimos ullam sunt eveniet soluta inventore.</p>
   </div>
+
+
+</div>
+<div class = "button">
+  <a href="main.html">BEGIN</a>
+</div>
   
-  <div class="container-landing-page">
-    <h1>Nocturnal Reverie</h1>
-    <p>
-      <a href="main.html">Link</a>
-    </p>
-  </div>
 
  
 
