--- a/projecttemp/index.html
+++ b/projecttemp/index.html
@@ -15,7 +15,7 @@
   </div>
 
   <div class="box1">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores magnam molestias corrupti provident a autem nesciunt rem laudantium consectetur? Laudantium reprehenderit et, velit numquam dignissimos ullam sunt eveniet soluta inventore.</p>
+    <p>Abstract Galaxy is as a dynamic and interactive representation of cosmic creativity, diversity, and the ever-changing nature of the galaxy. Each shape (heart, flower, diamond) symbolizes different emotions, where the heart represents love, the flower symbolizes growth, and a diamond signifies strength.</p>
   </div>
 
 
@@ -23,6 +23,8 @@
 <div class = "button">
   <a href="main.html">BEGIN</a>
 </div>
+
+
   
 
  
